--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,12 +31,13 @@
             android:id="@+id/editText"
             android:layout_width="356dp"
             android:layout_height="match_parent"
-            android:hint="appname://"
+            android:hint="@string/appname"
+            android:textColorHint="#616161"
             app:endIconMode="clear_text" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/historyList"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
